# fast_crawler

./: .gitignore  CLAUDE.md  Cargo.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
prompts/: ip_force.md
src/: llm.rs  main.rs  traits.rs
src/plugins/: ip_force.rs  mod.rs
templates/: patent_report.typ
